--- a/docs/assets/css/styles.css
+++ b/docs/assets/css/styles.css
@@ -11852,5 +11852,9 @@ textarea.form-control-lg {
   }
 }
 /* main scss */
+@font-face {
+  font-family: "hanabold";
+  src: url("../assets/fonts/Hana2-Bold.ttf");
+}
 
 /*# sourceMappingURL=styles.css.map */
