--- a/src/_includes/ex.html
+++ b/src/_includes/ex.html
@@ -149,8 +149,8 @@
 
     <div class="p-5 mb-4 bg-body-tertiary rounded-3">
       <div class="container-fluid py-5">
-        <h1 class="display-5 fw-bold">도서관 안내</h1>
-        <p class="col-md-8 fs-4">Using a series of utilities, you can create this jumbotron, just like the one in previous versions of Bootstrap. Check out the examples below for how you can remix and restyle it to your liking.</p>
+        <h1 class="display-5 fw-bold">책으로 여는 미래,<br>하나로 나아가는 문<br>하티도서관</h1>
+        <p class="col-md-8 fs-4">지속 가능한 미래를 위한 당신의 큰 발걸음. <br> 책 속의 세계가 현실로 이루어집니다. 이곳에서 당신의 궁금증을 해소하고 새로운 아이디어를 발견할 수 있습니다. <br> 지금 하티 도서관은 당신을 기다립니다.</p>
         <button class="btn btn-primary btn-lg" type="button">Read More</button>
       </div>
     </div>
@@ -172,9 +172,9 @@
       </div>
     </div>
 
-    <footer class="pt-3 mt-4 text-body-secondary border-top">
+    <!-- <footer class="pt-3 mt-4 text-body-secondary border-top">
       © 2023
-    </footer>
+    </footer> -->
   </div>
 </main>
 
