--- a/src/_layouts/base.html
+++ b/src/_layouts/base.html
@@ -5,6 +5,12 @@ layout: bootstrap
 <div>
     {% include nav.html %}
     {% include mainSearch.html %}
+    {% include carousel.html %}
     {% include ex.html %}
-    
+    {% include bookRecommand.html %}
+    {% include mainCard.html %}
 </div>
+
+<footer>
+    {%include footer.html %}
+</footer>
