--- a/src/_layouts/bootstrap.html
+++ b/src/_layouts/bootstrap.html
@@ -6,6 +6,12 @@
     <meta name="description" content="Jiny linux">
     <meta name="author" content="HojinLee">
 
+    <style>
+      /* body{
+        font-family: 'hanabold';
+      } */
+    </style>
+
     <title>JinyDev</title>
     <link rel="stylesheet" href='{{ "/assets/css/styles.css" | relative_url }}'>
   </head>
