--- a/src/_includes/mainSearch.html
+++ b/src/_includes/mainSearch.html
@@ -1,12 +1,22 @@
-<div class="container-xxl bg-primary my-6 wow fadeInUp" data-wow-delay="0.1s" style="visibility: visible; animation-delay: 0.1s; animation-name: fadeInUp;">
+<style>
+    #main {
+        background-color: rgb(0, 133, 126) !important;
+    }
+</style>
+
+
+<div class="container-xxl my-6 wow fadeInUp" id="main" data-wow-delay="0.1s"
+    style="visibility: visible; animation-delay: 0.1s; animation-name: fadeInUp;">
     <div class="container px-lg-5">
         <div class="row align-items-center" style="height: 250px;">
             <div class="col-12 col-md-6">
                 <h3 class="text-white">Hati Library</h3>
                 <small class="text-white">Diam elitr est dolore at sanctus nonumy.</small>
                 <div class="position-relative w-100 mt-3">
-                    <input class="form-control border-0 rounded-pill w-100 ps-4 pe-5" type="text" placeholder="자료검색" style="height: 48px;">
-                    <button type="button" class="btn shadow-none position-absolute top-0 end-0 mt-1 me-2"><i class="fa fa-paper-plane text-primary fs-4"></i></button>
+                    <input class="form-control border-0 rounded-pill w-100 ps-4 pe-5" type="text" placeholder="자료검색"
+                        style="height: 48px;">
+                    <button type="button" class="btn shadow-none position-absolute top-0 end-0 mt-1 me-2"><i
+                            class="fa fa-paper-plane text-primary fs-4"></i></button>
                 </div>
             </div>
             <div class="col-md-6 text-center mb-n5 d-none d-md-block">
