--- a/src/_includes/ex.html
+++ b/src/_includes/ex.html
@@ -99,8 +99,12 @@
       }
 
       #a{
-        background-color: rgb(0,133,126);
+        background-color: rgb(0,133,126)
         !important;
+      }
+
+      #b{
+        background-color: rgb(133,185,152);
       }
     </style>
 
@@ -147,25 +151,25 @@
       </a>
     </header>
 
-    <div class="p-5 mb-4 bg-body-tertiary rounded-3">
-      <div class="container-fluid py-5">
-        <h1 class="display-5 fw-bold">책으로 여는 미래,<br>하나로 나아가는 문<br>하티도서관</h1>
-        <p class="col-md-8 fs-4">지속 가능한 미래를 위한 당신의 큰 발걸음. <br> 책 속의 세계가 현실로 이루어집니다. 이곳에서 당신의 궁금증을 해소하고 새로운 아이디어를 발견할 수 있습니다. <br> 지금 하티 도서관은 당신을 기다립니다.</p>
+    <!-- <div class="p-5 mb-4 bg-body-tertiary rounded-3">
+      <div class="container-fluid py-5" id="b">
+        <h1 class="display-5 fw-bold" style="font-family: 'hanabold' !important; font-weight: bold;">책으로 여는 미래,<br>하나로 나아가는 문<br>하티도서관</h1>
+        <p class="col-md-8 fs-4" style="font-family: 'hanabold' !important; font-weight: bold;">지속 가능한 미래를 위한 당신의 큰 발걸음. <br> 책 속의 세계가 현실로 이루어집니다. 이곳에서 당신의 궁금증을 해소하고 새로운 아이디어를 발견할 수 있습니다. <br> 지금 하티 도서관은 당신을 기다립니다.</p>
         <button class="btn btn-primary btn-lg" type="button">Read More</button>
       </div>
-    </div>
+    </div> -->
 
     <div class="row align-items-md-stretch">
       <div class="col-md-6">
         <div class="h-100 p-5 rounded-3" id="a">
-          <h2>Change the background</h2>
+          <h2 style="font-family: 'hanabold' !important; font-weight: bold;">도서관 안내</h2>
           <p>Swap the background-color utility and add a `.text-*` color utility to mix up the jumbotron look. Then, mix and match with additional component themes and more.</p>
           <button class="btn btn-outline-light" type="button">Example button</button>
         </div>
       </div>
       <div class="col-md-6">
         <div class="h-100 p-5 bg-body-tertiary border rounded-3">
-          <h2>Add borders</h2>
+          <h2 style="font-family: 'hanabold' !important; font-weight: bold;">찾아오시는 길</h2>
           <p>Or, keep it light and add a border for some added definition to the boundaries of your content. Be sure to look under the hood at the source HTML here as we've adjusted the alignment and sizing of both column's content for equal-height.</p>
           <button class="btn btn-outline-secondary" type="button">Example button</button>
         </div>
