--- a/src/_includes/nav.html
+++ b/src/_includes/nav.html
@@ -17,15 +17,17 @@
         #nav3 {
             width: 100%;
             width: 1207px;
+            margin: 0 auto;
         }
 
         #nav2 {
             width: 1207px;
         }
 
-        /* .navbar-brand {
-            margin-left: 15%;
-        } */
+       #Logo{
+        width: 100px;
+        height: 100px;
+       }
     </style>
 
 </head>
@@ -37,15 +39,17 @@
             <nav id="nav">
                 <nav class="navbar navbar-expand-lg navbar-light px-4 px-lg-5 py-3 py-lg-0">
                     <a href="index.html" class="navbar-brand p-0">
-                        <h1 class="m-0" style="font-family: 'hanabold' !important; font-weight: bold;">Hati Library</h1>
-                        <!-- <img src="img/logo.png" alt="Logo"> -->
+                        <h1 class="m-0" style="font-family: 'hanabold' !important; font-weight: bold;">
+                            <img src="./img/img-hana-symbol.png" alt="Logo" id="Logo">
+                            Hati Library</h1>
                     </a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarCollapse">
                         <span class="fa fa-bars"></span>
                     </button>
                     <div class="collapse navbar-collapse" id="navbarCollapse">
-                        <div class="navbar-nav ms-auto py-0">
+                        <div class="navbar-nav ms-auto py-0"
+                            style="font-family: 'hanabold' !important; font-weight: bold;">
                             <a href="index.html" class="nav-item nav-link active">Home</a>
                             <a href="about.html" class="nav-item nav-link">도서관 안내</a>
                             <a href="service.html" class="nav-item nav-link">이용 서비스</a>
@@ -65,10 +69,8 @@
                     </div>
                 </nav>
             </nav>
+        </div>
+    </div>
 </body>
-
-<br>
-</div>
-</div>
 
 </html>
