--- a/src/_includes/carousel.html
+++ b/src/_includes/carousel.html
@@ -1,32 +1,30 @@
 <br>
 
-<div id="carouselExampleIndicators" class="carousel slide">
-    <div class="carousel-indicators">
-        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
-            aria-current="true" aria-label="Slide 1"></button>
-        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
-            aria-label="Slide 2"></button>
-        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
-            aria-label="Slide 3"></button>
-    </div>
+<style>
+    #carouselExampleInterval {
+        margin-left: 180px;
+        width: 80%;
+
+    }
+</style>
+
+<div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
     <div class="carousel-inner">
-        <div class="carousel-item active">
-            <img src="" class="d-block w-100" alt="...">
+        <div class="carousel-item active" data-bs-interval="1">
+            <img src="./img/mainbanner1.png" alt="...">
         </div>
-        <div class="carousel-item">
-            <img src="..." class="d-block w-100" alt="...">
+        <div class="carousel-item" data-bs-interval="2000">
+            <img src="./img/mainbanner2.png" class="d-block w-100" alt="...">
         </div>
         <div class="carousel-item">
             <img src="..." class="d-block w-100" alt="...">
         </div>
     </div>
-    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
-        data-bs-slide="prev">
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="prev">
         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
         <span class="visually-hidden">Previous</span>
     </button>
-    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
-        data-bs-slide="next">
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="next">
         <span class="carousel-control-next-icon" aria-hidden="true"></span>
         <span class="visually-hidden">Next</span>
     </button>
