--- a/src/_includes/mainSearch.html
+++ b/src/_includes/mainSearch.html
@@ -10,17 +10,17 @@
     <div class="container px-lg-5">
         <div class="row align-items-center" style="height: 250px;">
             <div class="col-12 col-md-6">
-                <h3 class="text-white">Hati Library</h3>
-                <small class="text-white">Diam elitr est dolore at sanctus nonumy.</small>
+                <h3 class="text-white" style="font-family: 'hanabold' !important; font-weight: bold;">Hati Library</h3>
+                <small class="text-white" style="font-family: 'hanabold' !important; font-weight: bold;">Diam elitr est dolore at sanctus nonumy.</small>
                 <div class="position-relative w-100 mt-3">
-                    <input class="form-control border-0 rounded-pill w-100 ps-4 pe-5" type="text" placeholder="자료검색"
+                    <input class="form-control border-0 rounded-pill w-100 ps-4 pe-5" type="text" style="font-family: 'hanabold' !important; font-weight: bold;" placeholder="자료검색"
                         style="height: 48px;">
                     <button type="button" class="btn shadow-none position-absolute top-0 end-0 mt-1 me-2"><i
                             class="fa fa-paper-plane text-primary fs-4"></i></button>
                 </div>
             </div>
-            <div class="col-md-6 text-center mb-n5 d-none d-md-block">
-                <img class="img-fluid mt-5" style="max-height: 250px;" src="./img/library.png">
+            <!-- <div class="col-md-6 text-center mb-n5 d-none d-md-block">
+                <img class="img-fluid mt-5" style="max-height: 250px;" src="./img/library.png"> -->
             </div>
         </div>
     </div>
