--- a/src/_includes/bookRecommand.html
+++ b/src/_includes/bookRecommand.html
@@ -26,40 +26,40 @@
   <div class="card1" style="width: 18rem;">
     <img src="./img/book1.png" class="card-img-top" alt="...">
     <div class="card-body">
-      <h5 class="card-title">베스트 셀러</h5>
-      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+      <h5 class="card-title" style="font-family: 'hanabold' !important; font-weight: bold;">베스트 셀러</h5>
+      <p class="card-text" style="font-family: 'hanabold' !important; font-weight: bold;">Some quick example text to build on the card title and make up the bulk of the card's
         content.</p>
-      <a href="#" class="btn btn-primary">Go somewhere</a>
+      <a href="#" class="btn btn-primary" style="font-family: 'hanabold' !important; font-weight: bold;">Go somewhere</a>
     </div>
   </div>
 
   <div class="card2" style="width: 18rem;">
     <img src="./img/book2.png" class="card-img-top" alt="...">
     <div class="card-body">
-      <h5 class="card-title">이달의 책</h5>
-      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+      <h5 class="card-title" style="font-family: 'hanabold' !important; font-weight: bold;">이달의 책</h5>
+      <p class="card-text" style="font-family: 'hanabold' !important; font-weight: bold;">Some quick example text to build on the card title and make up the bulk of the card's
         content.</p>
-      <a href="#" class="btn btn-primary">Go somewhere</a>
+      <a href="#" class="btn btn-primary" style="font-family: 'hanabold' !important; font-weight: bold;">Go somewhere</a>
     </div>
   </div>
 
   <div class="card3" style="width: 18rem;">
     <img src="./img/book3.png" class="card-img-top" alt="...">
     <div class="card-body">
-      <h5 class="card-title">이주의 책</h5>
-      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+      <h5 class="card-title" style="font-family: 'hanabold' !important; font-weight: bold;">이주의 책</h5>
+      <p class="card-text" style="font-family: 'hanabold' !important; font-weight: bold;">Some quick example text to build on the card title and make up the bulk of the card's
         content.</p>
-      <a href="#" class="btn btn-primary">Go somewhere</a>
+      <a href="#" class="btn btn-primary" style="font-family: 'hanabold' !important; font-weight: bold;">Go somewhere</a>
     </div>
   </div>
 
   <div class="card4" style="width: 18rem;">
     <img src="./img/book4.png" class="card-img-top" alt="...">
     <div class="card-body">
-      <h5 class="card-title">새로나온 책</h5>
-      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+      <h5 class="card-title" style="font-family: 'hanabold' !important; font-weight: bold;">새로나온 책</h5>
+      <p class="card-text" style="font-family: 'hanabold' !important; font-weight: bold;">Some quick example text to build on the card title and make up the bulk of the card's
         content.</p>
-      <a href="#" class="btn btn-primary">Go somewhere</a>
+      <a href="#" class="btn btn-primary" style="font-family: 'hanabold' !important; font-weight: bold;">Go somewhere</a>
     </div>
   </div>
 
