--- a/src/_includes/nav.html
+++ b/src/_includes/nav.html
@@ -24,10 +24,10 @@
             width: 1207px;
         }
 
-       #Logo{
-        width: 100px;
-        height: 100px;
-       }
+        #Logo {
+            width: 100px;
+            height: 100px;
+        }
     </style>
 
 </head>
@@ -41,7 +41,8 @@
                     <a href="index.html" class="navbar-brand p-0">
                         <h1 class="m-0" style="font-family: 'hanabold' !important; font-weight: bold;">
                             <img src="./img/img-hana-symbol.png" alt="Logo" id="Logo">
-                            Hati Library</h1>
+                            Hati Library
+                        </h1>
                     </a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarCollapse">
@@ -65,7 +66,8 @@
                             </div>
                             <a href="contact.html" class="nav-item nav-link">Contact</a>
                         </div>
-                        <a href="" class="btn btn-light rounded-pill text-primary py-2 px-4 ms-lg-5">Login</a>
+                        <a href="loginPage.html"
+                            class="btn btn-light rounded-pill text-primary py-2 px-4 ms-lg-5">Login</a>
                     </div>
                 </nav>
             </nav>
