--- a/src/_includes/carousel.html
+++ b/src/_includes/carousel.html
@@ -10,14 +10,17 @@
 
 <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
     <div class="carousel-inner">
-        <div class="carousel-item active" data-bs-interval="1">
+        <div class="carousel-item active" data-bs-interval="3200">
             <img src="./img/mainbanner1.png" alt="...">
         </div>
-        <div class="carousel-item" data-bs-interval="2000">
+        <div class="carousel-item" data-bs-interval="3200">
             <img src="./img/mainbanner2.png" class="d-block w-100" alt="...">
         </div>
-        <div class="carousel-item">
-            <img src="..." class="d-block w-100" alt="...">
+        <div class="carousel-item" data-bs-interval="3200">
+            <img src="./img/mainbanner3.png" class="d-block w-100" alt="...">
+        </div>
+        <div class="carousel-item" data-bs-interval="3200">
+            <img src="./img/mainbanner4.png" class="d-block w-100" alt="...">
         </div>
     </div>
     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="prev">
