--- a/src/_layouts/base.html
+++ b/src/_layouts/base.html
@@ -2,6 +2,10 @@
 layout: bootstrap
 ---
 
+<header>
+    
+</header>
+
 <div>
     {% include nav.html %}
     {% include mainSearch.html %}
@@ -9,6 +13,7 @@ layout: bootstrap
     {% include ex.html %}
     {% include bookRecommand.html %}
     {% include mainCard.html %}
+    <!-- {% include picks.html %} -->
 </div>
 
 <footer>
