--- a/src/_includes/carousel.html
+++ b/src/_includes/carousel.html
@@ -4,6 +4,8 @@
     #carouselExampleInterval {
         margin-left: 180px;
         width: 80%;
+        display: flex;
+        justify-content: center;
 
     }
 </style>
