--- a/src/_includes/mainSearch.html
+++ b/src/_includes/mainSearch.html
@@ -1,10 +1,13 @@
 <style>
     #main {
         background-color: rgb(0, 133, 126) !important;
+        display: flex;
+        justify-content: center;
+
     }
 </style>
 
-
+<br><br><br><br>
 <div class="container-xxl my-6 wow fadeInUp" id="main" data-wow-delay="0.1s"
     style="visibility: visible; animation-delay: 0.1s; animation-name: fadeInUp;">
     <div class="container px-lg-5">
