--- a/src/_includes/bookRecommand.html
+++ b/src/_includes/bookRecommand.html
@@ -1,65 +1,167 @@
 <br><br><br>
 <style>
   #card {
-    margin-left: 300px;
+    display: flex;
+    justify-content: center;
   }
 
   .card1 {
     margin-right: 50px;
   }
 
+  #img1 {
+    transition: transform 0.2s ease;
+  }
+
+  #img1:hover {
+    transform: scale(1.09);
+  }
+
   .card2 {
     margin-right: 50px;
+  }
+
+  #img2 {
+    transition: transform 0.2s ease;
+  }
+
+  #img2:hover {
+    transform: scale(1.09);
   }
 
   .card3 {
     margin-right: 50px;
   }
 
+  #img3 {
+    transition: transform 0.2s ease;
+  }
+
+  #img3:hover {
+    transform: scale(1.09);
+  }
+
   .card4 {
     margin-right: 50px;
+  }
+
+  #img4 {
+    transition: transform 0.2s ease;
+  }
+
+  #img4:hover {
+    transform: scale(1.09);
+  }
+
+
+  #cardBtn1 {
+    background-color: #63606d;
+    border-color: aliceblue;
+  }
+
+  #cardBtn1:hover {
+  background-color: rgb(0, 133, 126); 
+}
+
+  #cardBtn1:active {
+    background-color: #63606d);
+  }
+
+  #cardBtn2 {
+    background-color: #63606d;
+    border-color: aliceblue;
+  }
+
+  #cardBtn2:hover {
+  background-color: rgb(0, 133, 126); 
+  }
+
+  #cardBtn2:active {
+    background-color: rgb(0, 133, 126);
+  }
+
+  #cardBtn3 {
+    background-color: #63606d;
+    border-color: aliceblue;
+  }
+
+  #cardBtn3:hover {
+  background-color: rgb(0, 133, 126); 
+  }
+
+  #cardBtn3:active {
+    background-color: rgb(0, 133, 126);
+  }
+
+  #cardBtn4 {
+    background-color: #63606d;
+    border-color: aliceblue;
+  }
+
+  #cardBtn4:hover {
+  background-color: rgb(0, 133, 126); 
+  }
+
+  #cardBtn4:active {
+    background-color: rgb(0, 133, 126);
   }
 </style>
 
 
 <div class="row g-4" id="card">
   <div class="card1" style="width: 18rem;">
-    <img src="./img/book1.png" class="card-img-top" alt="...">
+    <img src="./img/book1.png" class="card-img-top" id="img1">
     <div class="card-body">
+      <br>
       <h5 class="card-title" style="font-family: 'hanabold' !important; font-weight: bold;">베스트 셀러</h5>
-      <p class="card-text" style="font-family: 'hanabold' !important; font-weight: bold;">Some quick example text to build on the card title and make up the bulk of the card's
-        content.</p>
-      <a href="#" class="btn btn-primary" style="font-family: 'hanabold' !important; font-weight: bold;">Go somewhere</a>
+      <!-- <p class="card-text" style="font-family: 'hanabold' !important; font-weight: bold;">Some quick example text to
+        build on the card title and make up the bulk of the card's
+        content.</p> -->
+      <br>
+      <div class="btn btn-primary" id="cardBtn1" style="font-family: 'hanabold' !important; font-weight: bold;">Read
+        More</div>
     </div>
   </div>
 
   <div class="card2" style="width: 18rem;">
-    <img src="./img/book2.png" class="card-img-top" alt="...">
+    <img src="./img/book2.png" class="card-img-top" id="img2">
     <div class="card-body">
+      <br>
       <h5 class="card-title" style="font-family: 'hanabold' !important; font-weight: bold;">이달의 책</h5>
-      <p class="card-text" style="font-family: 'hanabold' !important; font-weight: bold;">Some quick example text to build on the card title and make up the bulk of the card's
-        content.</p>
-      <a href="#" class="btn btn-primary" style="font-family: 'hanabold' !important; font-weight: bold;">Go somewhere</a>
+      <!-- <p class="card-text" style="font-family: 'hanabold' !important; font-weight: bold;">Some quick example text to
+        build on the card title and make up the bulk of the card's
+        content.</p> -->
+      <br>
+      <div class="btn btn-primary" id="cardBtn2" style="font-family: 'hanabold' !important; font-weight: bold;">Read
+        More</div>
     </div>
   </div>
 
   <div class="card3" style="width: 18rem;">
-    <img src="./img/book3.png" class="card-img-top" alt="...">
+    <img src="./img/book3.png" class="card-img-top" id="img3">
     <div class="card-body">
+      <br>
       <h5 class="card-title" style="font-family: 'hanabold' !important; font-weight: bold;">이주의 책</h5>
-      <p class="card-text" style="font-family: 'hanabold' !important; font-weight: bold;">Some quick example text to build on the card title and make up the bulk of the card's
-        content.</p>
-      <a href="#" class="btn btn-primary" style="font-family: 'hanabold' !important; font-weight: bold;">Go somewhere</a>
+      <!-- <p class="card-text" style="font-family: 'hanabold' !important; font-weight: bold;">Some quick example text to
+        build on the card title and make up the bulk of the card's
+        content.</p> -->
+      <br>
+      <div class="btn btn-primary" id="cardBtn3" style="font-family: 'hanabold' !important; font-weight: bold;">Read
+        More</div>
     </div>
   </div>
 
   <div class="card4" style="width: 18rem;">
-    <img src="./img/book4.png" class="card-img-top" alt="...">
+    <img src="./img/book4.png" class="card-img-top" id="img4">
     <div class="card-body">
+      <br>
       <h5 class="card-title" style="font-family: 'hanabold' !important; font-weight: bold;">새로나온 책</h5>
-      <p class="card-text" style="font-family: 'hanabold' !important; font-weight: bold;">Some quick example text to build on the card title and make up the bulk of the card's
-        content.</p>
-      <a href="#" class="btn btn-primary" style="font-family: 'hanabold' !important; font-weight: bold;">Go somewhere</a>
+      <!-- <p class="card-text" style="font-family: 'hanabold' !important; font-weight: bold;">Some quick example text to
+        build on the card title and make up the bulk of the card's
+        content.</p> -->
+      <br>
+      <div class="btn btn-primary" id="cardBtn4" style="font-family: 'hanabold' !important; font-weight: bold;">Read
+        More</div>
     </div>
   </div>
 
