--- a/src/_includes/nav.html
+++ b/src/_includes/nav.html
@@ -13,11 +13,16 @@
         .btn btn-light rounded-pill text-primary py-2 px-4 ms-lg-5 {
             background-color: yellow;
         }
-
+        
         #nav3 {
             width: 100%;
-            width: 1207px;
-            margin: 0 auto;
+            position: fixed;
+            top: 0;
+            left: 50%;
+            transform: translateX(-50%);
+            background-color: white;
+            display: flex;
+            justify-content: center;
         }
 
         #nav2 {
