--- a/src/_includes/ex.html
+++ b/src/_includes/ex.html
@@ -183,22 +183,29 @@
     </div> -->
 
       <div class="row align-items-md-stretch">
+
         <div class="col-md-6">
           <div class="h-100 p-5 rounded-3" id="a">
             <h2 style="font-family: 'hanabold' !important; font-weight: bold;">도서관 안내</h2>
             <p style="font-family: 'hanabold' !important; font-weight: bold;">층별 안내, 열람실 안내, 휴관일 안내</p>
+            <a href="libraryInfo.html">
             <button class="btn btn-outline-light" type="button"
               style="font-family: 'hanabold' !important; font-weight: bold;">알아보기</button>
+            </a>
           </div>
         </div>
+
         <div class="col-md-6">
           <div class="h-100 p-5 bg-body-tertiary border rounded-3">
             <h2 style="font-family: 'hanabold' !important; font-weight: bold;">찾아오시는 길</h2>
             <p style="font-family: 'hanabold' !important; font-weight: bold;">위치(주소)안내, 대중교통 안내</p>
+            <a href="libraryDirection.html">
             <button class="btn btn-outline-secondary" type="button"
               style="font-family: 'hanabold' !important; font-weight: bold;">알아보기</button>
+            </a>
           </div>
         </div>
+
       </div>
 
       <!-- <footer class="pt-3 mt-4 text-body-secondary border-top">
