--- a/src/_layouts/base.html
+++ b/src/_layouts/base.html
@@ -8,12 +8,7 @@ layout: bootstrap
 
 <div>
     {% include nav.html %}
-    {% include mainSearch.html %}
-    {% include carousel.html %}
-    {% include ex.html %}
-    {% include bookRecommand.html %}
-    {% include mainCard.html %}
-    <!-- {% include picks.html %} -->
+    {{content}}
 </div>
 
 <footer>
