--- a/src/_includes/bookRecommand.html
+++ b/src/_includes/bookRecommand.html
@@ -118,8 +118,10 @@
         build on the card title and make up the bulk of the card's
         content.</p> -->
       <br>
+      <a href="aboutBook.html">
       <div class="btn btn-primary" id="cardBtn1" style="font-family: 'hanabold' !important; font-weight: bold;">Read
         More</div>
+      </a>
     </div>
   </div>
 
@@ -132,8 +134,10 @@
         build on the card title and make up the bulk of the card's
         content.</p> -->
       <br>
+      <a href="aboutBook.html">
       <div class="btn btn-primary" id="cardBtn2" style="font-family: 'hanabold' !important; font-weight: bold;">Read
         More</div>
+      </a>
     </div>
   </div>
 
@@ -146,8 +150,10 @@
         build on the card title and make up the bulk of the card's
         content.</p> -->
       <br>
+      <a href="aboutBook.html">
       <div class="btn btn-primary" id="cardBtn3" style="font-family: 'hanabold' !important; font-weight: bold;">Read
         More</div>
+      </a>
     </div>
   </div>
 
@@ -160,8 +166,10 @@
         build on the card title and make up the bulk of the card's
         content.</p> -->
       <br>
+      <a href="aboutBook.html">
       <div class="btn btn-primary" id="cardBtn4" style="font-family: 'hanabold' !important; font-weight: bold;">Read
         More</div>
+      </a>
     </div>
   </div>
 
