--- a/src/_includes/nav.html
+++ b/src/_includes/nav.html
@@ -35,7 +35,7 @@
 </head>
 
 <body>
-    <br>
+    <br><br><br>
     <div id="nav3">
         <div id="nav2">
             <nav id="nav">
@@ -69,12 +69,25 @@
 
                         </div>
                         <a href="loginPage.html"
-                            class="btn btn-light rounded-pill text-primary py-2 px-4 ms-lg-5">Login</a>
+                            class="btn btn-light rounded-pill text-primary py-2 px-4 ms-lg-5" onclick="">Login
+                        </a>
                     </div>
                 </nav>
             </nav>
         </div>
     </div>
 </body>
+
+<script>
+    document.addEventListener('DOMContentLoaded', function () {
+        const loginButton = document.querySelector('btn btn-light rounded-pill text-primary py-2 px-4 ms-lg-5');
+        loginButton.addEventListener('click', function () {
+            alert('확인');
+        });
+    });
+</script>
+
+
+
 
 </html>
