--- a/src/_includes/temp_books.html
+++ b/src/_includes/temp_books.html
@@ -1,6 +1,112 @@
----
-# Add front matter to specify the JSON data file
----
+<style>
+    #card {
+        display: flex;
+        justify-content: center;
+    }
+
+    .card1 {
+        margin-right: 50px;
+    }
+
+    #img1 {
+        transition: transform 0.2s ease;
+    }
+
+    #img1:hover {
+        transform: scale(1.09);
+    }
+
+    .card2 {
+        margin-right: 50px;
+    }
+
+    #img2 {
+        transition: transform 0.2s ease;
+    }
+
+    #img2:hover {
+        transform: scale(1.09);
+    }
+
+    .card3 {
+        margin-right: 50px;
+    }
+
+    #img3 {
+        transition: transform 0.2s ease;
+    }
+
+    #img3:hover {
+        transform: scale(1.09);
+    }
+
+    .card4 {
+        margin-right: 50px;
+    }
+
+    #img4 {
+        transition: transform 0.2s ease;
+    }
+
+    #img4:hover {
+        transform: scale(1.09);
+    }
+
+
+    #cardBtn1 {
+        background-color: #63606d;
+        border-color: aliceblue;
+    }
+
+    #cardBtn1:hover {
+        background-color: rgb(0, 133, 126);
+    }
+
+    #cardBtn1:active {
+        background-color: #63606d;
+    }
+
+    #cardBtn2 {
+        background-color: #63606d;
+        border-color: aliceblue;
+    }
+
+    #cardBtn2:hover {
+        background-color: rgb(0, 133, 126);
+    }
+
+    #cardBtn2:active {
+        background-color: rgb(0, 133, 126);
+    }
+
+    #cardBtn3 {
+        background-color: #63606d;
+        border-color: aliceblue;
+    }
+
+    #cardBtn3:hover {
+        background-color: rgb(0, 133, 126);
+    }
+
+    #cardBtn3:active {
+        background-color: rgb(0, 133, 126);
+    }
+
+    #cardBtn4 {
+        background-color: #63606d;
+        border-color: aliceblue;
+    }
+
+    #cardBtn4:hover {
+        background-color: rgb(0, 133, 126);
+    }
+
+    #cardBtn4:active {
+        background-color: rgb(0, 133, 126);
+    }
+</style>
+
+
 <div class="row g-4" id="card">
     {% assign books = site.data.books.books %}
     {% for book in books %}
